--- a/backend/src/DoneDay.API/appsettings.json
+++ b/backend/src/DoneDay.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=doneday.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
